Memoize fetching coin balance for account to only run it once per coin
Useful as more pools will continue being added with many overlapping 
coins due to metapools, so we want things to remain fast

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^4.3.1",
     "ipfs-react-router": "^0.2.2",
+    "memoizee": "^0.4.15",
     "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
